--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src = "js/reviewvis.js"></script>
 
     <!-- Structure from corn visualization -->
-<!--     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -44,7 +44,7 @@
           </ul>
         </div>
       </div>
-    </nav> -->
+    </nav>
 
 <style type="text/css">
 
@@ -71,10 +71,10 @@
     .map {
         stroke: black;
     }
-.clear-button {
-  font: 14px sans-serif;
-  cursor: pointer;
-}
+    .clear-button {
+      font: 14px sans-serif;
+      cursor: pointer;
+    }
 
 
 /*    .borders {
@@ -94,29 +94,40 @@
 
     .text{
         font-family: Arial, Helvetica, sans-serif
-        font-size: 9pt;
+        font-size: 8pt;
     }
 
     .title {
         font: 20px Helvetica;
-        font-variant: small-caps;
+        /*font-variant: small-caps;*/
         /*font-weight: bold;*/
         text-align: center;
         margin: auto;
     }
+    .legendtext {
+        font: 10px Helvetica;
+        /*font-variant: small-caps;*/
+        /*font-weight: bold;*/
+        /*text-align: center;*/
+        /*margin: auto;*/
+    }
 
-    .yaxis path,
-    .yaxis line {
+    .subheading {
+        font: 10px Helvetica;
+    }
+
+    .axis path,
+    .axis line {
         fill: none;
         stroke: black;
         shape-rendering: crispEdges;
-        stroke-width: 1px;
+        /*stroke-width: 1px;*/
     }
-    .yaxis text {
-        font-family: sans-serif;
+    .axis text {
+        /*font: 10px Helvetica;*/
+        font-family: Helvetica;
         font-size: 8px;
     }
-
 
     /*Colorbrewer green color scale*/
     .q0-5{fill:rgb(237,248,251)} 
@@ -142,14 +153,12 @@
 </head>
 
 <body>
-    <!-- <h3>Yelp Data Challenge</h3> -->
-
 
     <div class="row">
 
-        <div id="Filter" style="position:absolute; top: 25px; left: 550px; z-index:1">
+        <div id="Filter" style="position:absolute; top: 55px; left: 450px; z-index:1">
 
-            Business Category: <br>
+            <b>Business Category</b>: <br>
             <form>
                 <input type="checkbox" name="filter" value="restaurant" checked>Restaurant<br>
                 <input type="checkbox" name="filter" value="bar" checked>Bar<br>
@@ -160,22 +169,25 @@
 
         </div>
 
-        <div id="forceoptions" style="position:absolute; top: 25px; left: 1300px; z-index:1">
+        <div id="forceoptions" style="position:absolute; top: 180px; left: 450px; z-index:1">
 
-            Node Grouping: <br>
+            <b>Color By:</b> <br>
+            <select id="colorby">
+                <option value="rating" selected>Rating</option>
+                <option value="number" >Number of Reviews</option>
+                <!-- <option value="category">Category</option> -->
+            </select> <br>
+
+
+            <b>Node Grouping:</b> <br>
             <select id="nodegroup">
-                <option value="category" selected>Category</option>
-                <option value="none" >None</option>
+                <option value="category" >Category</option>
+                <option value="none" selected>None</option>
             </select>
 
             <br>
 
-            Color By: <br>
-            <select id="colorby">
-                <option value="rating">Rating</option>
-                <option value="number">Number of Reviews</option>
-                <option value="category">Category</option>
-            </select>
+
 
         </div>
 
@@ -183,9 +195,9 @@
 
     <div class="row">
 
-        <div class="col-md-6" id="mapVis"></div>
+        <div class="col-md-5" id="mapVis"></div>
 
-        <div class="col-md-6" id="forceVis"></div>
+        <div class="col-md-7" id="forceVis"></div>
 
     </div>
 
@@ -212,7 +224,7 @@ $(function() {
     var categoryData=[];
     var nineCategories = [];
 
-    var nodeColor
+    var colorBy
     var nodeGroup
 
     //Call function after data loaded
@@ -223,7 +235,14 @@ $(function() {
         nodeGroup = sel.options[sel.selectedIndex].value
         d3.select("#nodegroup").on("change", function() {
             nodeGroup = sel.options[sel.selectedIndex].value
-            forcevis.onSelectionChange(businessDataNew);
+            forcevis.onDropDownChange(nodeGroup);
+        })
+
+        var sel2 = document.getElementById('colorby')
+        colorBy = sel2.options[sel2.selectedIndex].value
+        d3.select("#colorby").on("change", function() {
+            colorBy = sel2.options[sel2.selectedIndex].value
+            mapvis.onDropDownChange(colorBy);
         })
 
 
@@ -231,9 +250,9 @@ $(function() {
         var MyEventHandler = new Object()
 
         // Initiate vis objects
-        var mapvis = new MapVis(d3.select("#mapVis"),mapData, reviewData, businessData, userData,  MyEventHandler)
-        var areavis = new AreaVis(d3.select("#areaVis"), reviewData, businessData, MyEventHandler)
+        var mapvis = new MapVis(d3.select("#mapVis"),mapData, reviewData, businessData, colorBy,  MyEventHandler)
         var forcevis = new ForceVis(d3.select("#forceVis"),mapData, nodeGroup, businessDataNew, nineCategories, MyEventHandler)
+        var areavis = new AreaVis(d3.select("#areaVis"), reviewData, businessData, MyEventHandler)
         var reviewvis = new ReviewVis(d3.select("#reviewVis"),mapData, reviewData, businessData, MyEventHandler)
 
         //Bind the event handler to the vis objects
@@ -313,7 +332,7 @@ $(function() {
                 .slice(0, 20);
 
         //Define top 9 categories
-        nineCategories = [topCategories[0].category, topCategories[1].category, topCategories[3].category, topCategories[4].category, topCategories[7].category, topCategories[8].category, topCategories[9].category, topCategories[11].category, topCategories[12].category, "Other"]
+        nineCategories = [topCategories[7].category, topCategories[8].category, topCategories[3].category, "Other",  topCategories[0].category, topCategories[1].category, topCategories[4].category, topCategories[9].category, topCategories[11].category, topCategories[12].category]
 
         //Replace all categories in business data with one of the top nine categories
         var looping = false
@@ -359,6 +378,7 @@ $(function() {
 
         //Assign review data
         reviewData = _reviewData;
+        // console.log(reviewData)
 
         //Go to initvis
         initVis();
@@ -370,7 +390,7 @@ $(function() {
         queue()
             .defer(d3.json, 'data/BOUNDARY_CDDNeighborhoods.json')
             .defer(d3.json, 'data/businesses.json')
-            .defer(d3.json, 'data/minimalReview.json')
+            .defer(d3.json, 'data/funNewReviews.json')
             .await(dataLoaded)
     };
 
