--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Wicked Dope Yelp Visualization</title>
+    <title>Yelp Data Challenge</title>
 
     <!-- Add libraries -->
     <script src="libs/d3/d3.min.js"></script>
@@ -16,7 +16,6 @@
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="libs/d3.layout.cloud.js"></script>
 
-
     <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">
 
     <!-- Add vis classes   -->
@@ -25,13 +24,7 @@
     <script src = "js/forcevis.js"></script>
     <script src = "js/reviewvis.js"></script>
 
-    <defs>
-        <pattern id="img1" width="505" height="275">
-            <image xlink:href="cambridge.jpg" x="0" y="0" width ="505" height="275"/>
-        </pattern>
-    </defs>
-
-    <!-- Structure from corn visualization -->
+    <!-- Structure from corn visualization http://jbencook.github.io/cs171-ag-viz/ -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -70,6 +63,7 @@
     }
     .node {
         fill-opacity: 1;
+        position: relative;
     }
     .node--selected {
         fill: red;
@@ -85,6 +79,7 @@
       stroke: #fff;
       fill-opacity: .125;
       shape-rendering: crispEdges;
+      z-index: 1;
     }
     .map {
         stroke: black;
@@ -93,13 +88,6 @@
       font: 14px sans-serif;
       cursor: pointer;
     }
-
-
-/*    .borders {
-      fill: none;
-      stroke: darkgray;
-    }*/
-
 
     .tooltip {
       line-height: 1;
@@ -138,37 +126,39 @@
         font: 10px Helvetica;
     }
 
-    .y axis path,
-    .y axis line {
+    .y.axis path,
+    .y.axis line {
         fill: none;
         stroke: black;
         shape-rendering: crispEdges;
         stroke: 1px;
     }
-    .y axis text {
+    .y.axis text {
         /*font: 10px Helvetica;*/
         font-family: Helvetica;
         font-size: 8px;
     }
-    .x axis path,
-    .x axis line {
+    .x.axis path,
+    .x.axis line {
         fill: none;
         stroke: black;
         shape-rendering: crispEdges;
         /*stroke-width: 1px;*/
     }
-    .x axis text {
+    .x.axis text {
         /*font: 10px Helvetica;*/
         font-family: Helvetica;
         font-size: 8px;
     }
 
-    /*Colorbrewer green color scale*/
-    .q0-5{fill:rgb(237,248,251)} 
-    .q1-5{fill:rgb(178,226,226)} 
-    .q2-5{fill:rgb(102,194,164)} 
-    .q3-5{fill:rgb(44,162,95)} 
-    .q4-5{fill:rgb(0,109,44)}
+.RdYlGn .q0-5{fill:rgb(215,25,28)} .RdYlGn .q1-5{fill:rgb(253,174,97)} .RdYlGn .q2-5{fill:rgb(255,255,191)} .RdYlGn .q3-5{fill:rgb(166,217,106)} .RdYlGn .q4-5{fill:rgb(26,150,65)}
+
+    /*Colorbrewer color scale*/
+    .q0-5{fill:rgb(215,25,28)}
+    .q1-5{fill:rgb(253,174,97)}
+    .q2-5{fill:rgb(255,255,191)}
+    .q3-5{fill:rgb(166,217,106)}
+    .q4-5{fill:rgb(26,150,65)}
 
     /*Colorbrewer qualitative scale*/
     .v0-10{fill:rgb(166,206,227)} 
@@ -190,26 +180,14 @@
 
     <div class="row">
 
-<!--         <div id="Filter" style="position:absolute; top: 55px; left: 450px; z-index:1">
-
-            <b>Business Category</b>: <br>
-            <form>
-                <input type="checkbox" name="filter" +value="restaurant" checked>Restaurant<br>
-                <input type="checkbox" name="filter" value="bar" checked>Bar<br>
-                <input type="checkbox" name="filter" value="shopping" checked>Shopping<br>
-                <input type="checkbox" name="filter" value="health" checked>Health and Medical<br>
-                <input type="checkbox" name="filter" value="beauty" checked>Beauty and Spas<br>
-            </form>
-
-        </div> -->
-
         <div id="mapoptions" style="position:absolute; top: 55px; left: 450px; z-index:1">
 
-            <b>Map Display:</b> <br>
+            <b>Map Display Categories:</b> <br>
             <select id="mapby">
                 <option value="all" selected>All Business</option>
                 <option value="Arts & Entertainment" >Arts & Entertainment</option>
                 <option value="Active Life" >Active Life</option>
+                <option value="Nightlife" >Nightlife</option>
                 <option value="Other" >Other</option>
                 <option value="Restaurants" >Restaurants</option>
                 <option value="Shopping" >Shopping</option>
@@ -219,17 +197,11 @@
                 <option value="Hotels & Travel" >Hotels & Travel</option>
             </select><br>
 
-<!--     </div>
-
-        <div id="forceoptions" style="position:absolute; top: 180px; left: 450px; z-index:1"> -->
-
-            <b>Color By:</b> <br>
+            <b>Color Map By:</b> <br>
             <select id="colorby">
                 <option value="rating" selected>Rating</option>
                 <option value="number" >Number of Reviews</option>
-                <!-- <option value="category">Category</option> -->
             </select> <br>
-
 
             <b>Node Grouping:</b> <br>
             <select id="nodegroup">
@@ -238,8 +210,6 @@
             </select>
 
             <br>
-
-
 
         </div>
 
@@ -260,7 +230,6 @@
         <div class="col-md-6" id="reviewVis"></div>
 
     </div>
-
 
 
 
@@ -293,7 +262,7 @@ $(function() {
         
         d3.select("#nodegroup").on("change", function() {
             nodeGroup = sel.options[sel.selectedIndex].value
-            forcevis.onDropDownChange(nodeGroup);
+            forcevis.onDropDownChange(nodeGroup, mapBy);
         })
 
         d3.select("#colorby").on("change", function() {
@@ -305,29 +274,42 @@ $(function() {
             mapBy = sel3.options[sel3.selectedIndex].value
             mapvis.onDropDownChange(colorBy, mapBy);
             forcevis.onDropDownChange(nodeGroup, mapBy);
+            areavis.onDropDownChange(mapBy)
         })
 
 
         // Create event handler
         var MyEventHandler = new Object()
         var MyEventHandler2 = new Object()
+        var MyEventHandler3 = new Object()
 
         // Initiate vis objects
-        var mapvis = new MapVis(d3.select("#mapVis"),mapData, reviewData, businessDataNew, colorBy,  MyEventHandler)
+        var mapvis = new MapVis(d3.select("#mapVis"),mapData, reviewData, businessDataNew, colorBy,  MyEventHandler, MyEventHandler3)
         var forcevis = new ForceVis(d3.select("#forceVis"),mapData, nodeGroup, businessDataNew, nineCategories, MyEventHandler2)
-        var areavis = new AreaVis(d3.select("#areaVis"), reviewData, businessData, MyEventHandler)
+        var areavis = new AreaVis(d3.select("#areaVis"), reviewData, businessDataNew, MyEventHandler)
         var reviewvis = new ReviewVis(d3.select("#reviewVis"),mapData, reviewData, businessData, wordData, MyEventHandler)
 
         //Bind the event handler to the vis objects
+
+        //Update force and area vis when brushing changes in map vis
         $(MyEventHandler).bind("selectionChanged", 
             function(event, selectedBusinesses) {
                 forcevis.onSelectionChange(selectedBusinesses)
                 areavis.onSelectionChange(selectedBusinesses)
             })
 
+        //Update map and reivew vis when a business is selected on the force vis
         $(MyEventHandler2).bind("selectionChanged",
             function(event, business_id) {
                 mapvis.onSelectionChange(business_id)
+                reviewvis.onSelectionChange(business_id)
+            })
+
+        //Update review vis when a business is selected on the map vis
+        $(MyEventHandler3).bind("selectionChanged",
+            function(event, business_id) {
+                console.log(business_id)
+                // mapvis.onSelectionChange(business_id)
                 reviewvis.onSelectionChange(business_id)
             })
 
@@ -365,8 +347,7 @@ $(function() {
         })
 
         //Create an array of every unique category
-        //Source
-        //http://mikeheavers.com/main/code-item/removing_duplicates_in_an_array_using_javascript
+        //Source http://mikeheavers.com/main/code-item/removing_duplicates_in_an_array_using_javascript
         var uniqueCategory = categoryData.filter(function(elem, pos) {
             return categoryData.indexOf(elem) == pos;
             });
@@ -445,7 +426,7 @@ $(function() {
             }
         })
 
-        //Define top 9 categories in orders
+        //Define top 9 categories in order
         nineCategories = [topCategories[7].category, topCategories[8].category, topCategories[3].category, "Other",  topCategories[0].category, topCategories[1].category, topCategories[4].category, topCategories[9].category, topCategories[11].category, topCategories[12].category]
 
         //Assign review data
@@ -461,8 +442,8 @@ $(function() {
         queue()
             .defer(d3.json, 'data/BOUNDARY_CDDNeighborhoods.json')
             .defer(d3.json, 'data/businesses.json')
-            .defer(d3.json, 'data/funNewReviews.json')
-            .defer(d3.json, 'data/wordCloudData.json')
+            .defer(d3.json, 'data/reviewCount.json')
+            .defer(d3.json, 'data/wordCloudDataUpdated.json')
             .await(dataLoaded)
     };
 
@@ -473,7 +454,7 @@ startHere();
 </script>
 </body>
 
-<!-- Code format learned from 2014 corn visualization -->
+<!-- Code format learned from 2014 corn visualization http://jbencook.github.io/cs171-ag-viz/-->
 <footer>
     <div class="row">
 
